# ai-campus-admin-agent

./: main.py  pyproject.toml
campus-admin-agent/: .env  README.md  main.py  pyproject.toml  rag_test.py  test.py  test_agent.py  test_all_fixes.py  test_validations.py
campus-admin-agent/backend/: .env.example  .gitignore  agent.py  alembic.ini  db.py  main.py  memory_store.py  smit_rag.py  tools.py
campus-admin-agent/backend/alembic/: env.py
campus-admin-agent/backend/data/: smit.txt
campus-admin-agent/frontend/pages/: index.js
